все коментарии поправленны